<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ixp.devicemonitor.DeviceDetailActivity">

    <!--<com.ixp.devicemonitor.AdView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:id="@+id/top_ad"/>-->

    <!--<com.ixp.devicemonitor.AdView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="60dp"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:id="@+id/botton_ad"/>-->

    <include
        android:id="@+id/top_ad"
        layout="@layout/layout_top" />

    <include
        android:id="@+id/bottom_lay"
        layout="@layout/layout_bottom" />


    <Button
        android:id="@+id/modify_name"
        android:gravity="center"
        android:text="更改名称"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_above="@id/bottom_lay" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/modify_name"
        android:layout_below="@id/top_ad"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_name" />

            <TextView
                android:id="@+id/detail_device_name"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_id" />

            <TextView
                android:id="@+id/detail_device_id"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_temperature" />

            <TextView
                android:id="@+id/detail_device_temperature"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_tds" />

            <TextView
                android:id="@+id/detail_device_tds"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_ph" />

            <TextView
                android:id="@+id/detail_device_ph"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_detail_state" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Switch
                    android:id="@+id/detail_device_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:textOff="@string/close_device"
                    android:textOn="@string/open_device" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/device_update_date" />

            <TextView
                android:id="@+id/detail_update_date"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
