<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_machine_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ixp.devicemonitor.MachineSettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/network_ssid" />

                <EditText
                    android:id="@+id/network_ssid"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/network_password" />

                <EditText
                    android:id="@+id/network_password"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/server_address" />

                <EditText
                    android:id="@+id/server_address"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/server_port" />

                <EditText
                    android:id="@+id/server_port"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/machine_id" />

                <EditText
                    android:id="@+id/machine_id"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/ph_cofa" />

                <EditText
                    android:id="@+id/ph_cofa"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/ph_cofb" />

                <EditText
                    android:id="@+id/ph_cofb"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/tds_cofa" />

                <EditText
                    android:id="@+id/tds_cofa"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_text_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/tds_cofb" />

                <EditText
                    android:id="@+id/tds_cofb"
                    style="@style/detail_text_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/set_params"
                    android:textSize="20sp"
                    android:id="@+id/set_params"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/read_params"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/read_params"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
