<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ixp.devicemonitor.RegisterActivity">

    <!--<com.ixp.devicemonitor.AdView-->
        <!--android:id="@+id/top_ad"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:layout_alignParentTop="true" />-->

    <!--<com.ixp.devicemonitor.AdView-->
        <!--android:id="@+id/botton_ad"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_alignParentBottom="true" />-->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <include android:id="@+id/top_ad"
        layout="@layout/layout_top"/>

    <include layout="@layout/layout_bottom"
        android:id="@+id/bottom_lay"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_lay"
        android:layout_below="@id/top_ad"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/register_form"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/prompt_username" />

            <EditText
                android:id="@+id/register_name"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/prompt_password" />

            <EditText
                android:id="@+id/register_password"
                style="@style/detail_text_right"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/prompt_password_re" />

            <EditText
                android:id="@+id/register_password_again"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                style="@style/detail_text_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/mail_label" />

            <EditText
                android:id="@+id/mail"
                style="@style/detail_text_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/action_register"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
