<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:src="@mipmap/back" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="连接中"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_configure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_configure_selector"
                android:visibility="gone" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:text="@string/configure_info"
                android:textColor="@color/colorPrimary" />


            <Button
                android:id="@+id/btn_check"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:text="@string/error_check"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:visibility="invisible"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/btn_ap"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:textColor="@color/white"
                android:text="@string/error_ap"
                android:visibility="invisible"
                android:background="@color/colorPrimary"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>